[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proven"
version = "0.1.0"
description = "Test-first code generation with LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
proven = "proven.main:app"

[tool.hatch.build.targets.wheel]
packages = ["proven"]
